infradev/k8s/colaborare-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colaborare-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colaborare
  template:
    metadata:
      labels:
        app: colaborare
    spec:
      containers:
        - name: colaborare
          image: george1999/colaborare
---
apiVersion: v1
kind: Service
metadata:
  name: colaborare-service
spec:
  selector:
    app: colaborare
  ports:
    - name: colaborare
      protocol: TCP
      port: 3503
      targetPort: 3503
